[package]
name = "codetagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
regex = "1.10.4"
walkdir = "2.5.0"
