[package]
name = "codetagger"
version = "0.1.0"
edition = "2021"
default-run = "codetagger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
edit-distance = "2.1.0"
itertools = "0.13.0"
regex = "1.10.4"
walkdir = "2.5.0"

[lib]
name = "codetagger"
path = "src/lib.rs"

[[bin]]
name = "taxer"
path = "src/taxer.rs"
